# mcp-server-asana

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  dockerfile  pyproject.toml
.devcontainer/: devcontainer.env  devcontainer.json  docker-compose.yml
.github/workflows/: pipeline.yml
mcp_server/: __about__.py  local_settings.example.json  main.py  mcp_config.json  mcp_config_authentication_management.json  mcp_config_item_usage_tracking.json  models.py
scripts/: start_service.sh  static-analysis.sh
tests/: test_mcp_server.py
